# esp32-aws-cam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
config/aws/: aws_ota_codesigner_certificate.h  core_pkcs11_config.h  fsu_eye_aws_credentials.h
config/bt/: iot_ble_config.h
config/esp32/: partition-table.csv  sdkconfig.defaults  sdkconfig.release
config/eye/: fsu_eye_app_config.h
config/http_server/: fsu_http_server_config.h
config/kvs/: fsu_eye_kvs_defaults.h
config/wifi/: fsu_eye_wifi_credentials.h
docs/: AWS_Interface.md  KVS.md  OTA.md
fsu/: CMakeLists.txt
fsu/freertos/: CMakeLists.txt  fsu_eye_freertos_callbacks.c
fsu/src/: main.c
fsu/system_controller/include/system_controller/: aws_service.h  system_controller.h  wifi_service.h
fsu/system_controller/src/: aws_service.c  system_controller.c
fsu/util/: CMakeLists.txt
fsu/util/include/util/: debug.h
fsu/util/src/: debug.c
include/aws/: NOTICE.txt
include/fe_system/: fe_ble.h  fe_nvs.h  fe_sys.h  fe_wifi.h
include/fe_system/include/: fe_sys.h  fe_wifi.h
include/services/: aws_service.h  command_parser.h  kvs_service.h  system_controller.h
include/services/include/services/: aws_service.h  camera_service.h  system_controller.h
src/: fsu_eye_freertos_callbacks.c  main.c
src/fe_system/: fe_ble.c  fe_nvs.c  fe_sys.c  fe_wifi.c
src/fe_system/src/: fe_wifi.c
src/freertos/: CMakeLists.txt  fsu_eye_freertos_callbacks.c
src/rtos/: fsu_eye_freertos_callbacks.c
src/services/: aws_service.c  camera_service.c  command_parser.c  kvs_service.c  system_controller.c  wifi_service.c
